# ahagon

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: app.ui  core.rs  main.rs
src/core/: dialog.rs  mod.rs  settings.rs
src/gui/: mod.rs
src/interface/: #app.ui#  app.ui
src/resources/glade/: setting.ui
